--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.application.name=product
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8080
 
-spring.datasource.url= jdbc:mysql://localhost:3306/product
+spring.datasource.url=jdbc:mysql://localhost:3306/product
 spring.datasource.username=root
 spring.datasource.password=A#1234Esther
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# This was what caused the error we were getting
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
